--- a/ecommerce-dashboard/package.json
+++ b/ecommerce-dashboard/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.6.0",
     "@types/react-chartjs-2": "^2.0.2",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "next": "15.3.1",
