--- a/web3-login/package.json
+++ b/web3-login/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web3-react/core": "^8.2.3",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.13",
     "ethers": "^6.14.3",
     "next": "15.3.3",
     "react": "^19.0.0",
