--- a/web3-login/tsconfig.json
+++ b/web3-login/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts","react-app-env.d.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts","react-app-env.d.ts", "src/context/MetaMaskContext.js"],
   "exclude": ["node_modules"]
 }
